# parallel-disease-simulation

./: .gitignore  README.md
GPU/gpu_pset_code/: README.md  gpu_population_dynamics.ipynb  helpers.cuh  run.cu  run.sh  util.cuh
GPU/sim/: CMakeLists.txt
GPU/sim/include/: config.h
GPU/sim/src/: main.cu  simulation.cu  simulation.cuh
population_dynamics/: README.md  helpers.h  makePlots.py  points.txt  population_dynamics.ipynb  run.cpp  run.sh  util.h
